--- a/css/style.css
+++ b/css/style.css
@@ -606,7 +606,7 @@
 
 							#nav ul li a.active span:before
 							{
-								color: #e27689;
+								color: #9c764a;
 							}
 
 /*********************************************************************************/
