--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,9 @@
             padding-left: .5em;
             color: rgb(136, 136, 136);
         }
+        select:focus{
+        	outline: none;
+        }
 
 	/* Table */
 	
